# detected_objects_pointcloud_publisher

./: CMakeLists.txt  package.xml
config/: detected_obj_pc.param.yaml
include/detected_objects_pointcloud_publisher/: detected_objects_pointcloud_publisher.hpp  detected_objects_pointcloud_publisher_node.hpp  percepted_objects_pointcloud_publisher.hpp
launch/: detected_objects_publisher.launch.xml
rviz/: rviz_config.rviz
scripts/: cube_pointcloud_pub.py  detected_objs_pub.py
src/: detected_objects_node.cpp  detected_objects_pointcloud_publisher.cpp  detected_objects_pointcloud_publisher.hpp  detected_objects_pointcloud_publisher_node.cpp  percepted_objects_pointcloud_publisher.cpp  predicted_objects_node.cpp  predicted_objects_pointcloud_publisher_node.cpp  publisher_member_function.cpp  sync_objects_node.cpp  tracked_objects_node.cpp  tracked_objects_pointcloud_publisher_node.cpp
